tests/snapshots/tui__call_action_flows_interface_to_result.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"s:/o:i > s:/o:i › call Add > i.Add      "
"┌i.Add─────────────────────────────────┐"
"│42                                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ scroll · Esc back · q quit           "
