tests/snapshots/tui__call_detail_form_renders_field_and_trigger.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 8)"
---
"s:/o:i › call Add                       "
"┌call Add──────────────────────────────┐"
"│▶ n  u  42▏                           │"
"│                                      │"
"│                                      │"
"│                [触发]                │" Hidden by multi-width symbols: [(19, " "), (21, " ")]
"└──────────────────────────────────────┘"
"Tab move · Enter trigger · c copy-as · E"
