tests/snapshots/tui__call_result_renders_reply_value.snap
---
source: tests/tui.rs
assertion_line: 942
expression: "render_to_string(&state, 40, 8)"
---
"i.Add                                   "
"┌i.Add─────────────────────────────────┐"
"│49                                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ scroll · c copy-as · Esc back · q qui"
