tests/snapshots/tui__copy_as_capstone_loop_closes_popup_over_result.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"i > Details > Result                                    "
"┌i.Add─────────────────────────────────────────────────┐"
"│42                                                    │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"└──────────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back · q quit · ? h"
