tests/snapshots/tui__copy_as_popup_renders_over_detail.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 56, 14)"
---
"s:/o:i › call i.Add                                     "
"┌call i.Add────────────────────────────────────────────┐"
"│▶ n  u  42▏                                           │"
"│     ┌copy as — ↑↓ choose · Enter copy · Esc────┐     │"
"│     │dbus-send: dbus-send --print-reply --dest=│     │"
"│     │busctl: busctl --user call s /o i Add u 42│     │"
"│     │qdbus: qdbus s /o i.Add 42                │     │"
"│     │dbus-send --print-reply --dest=s /o i.Add │     │"
"│     │                                          │     │"
"│     └──────────────────────────────────────────┘     │"
"│                                                      │"
"│                       [Trigger]                      │"
"└──────────────────────────────────────────────────────┘"
"Tab move · Enter trigger · c copy-as · Esc back · q quit"
