tests/snapshots/tui__drill_down_auto_skips_service_to_interface.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"services > org.busx.Test > org.busx.Test / > org.busx.Test:/"
"┌▶ methods─────────────────────────────────────────────────┐"
"│Ping                                                      │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌properties (loading…)─────────────────────────────────────┐"
"│Name  s                                                   │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌signals───────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"Tab switch · ↑↓ select · r refresh · Esc back · q quit      "
