tests/snapshots/tui__filter_types_query_and_narrows_list.snap
---
source: tests/tui.rs
assertion_line: 257
expression: "render_to_string(&state, 52, 7)"
---
"                                                    "
"┌Services──────────────────────────────────────────┐"
"│org.busx.Test                                     │"
"│org.busx.Other                                    │"
"└──────────────────────────────────────────────────┘"
"/ busx                                              "
"↑↓ select · Enter open · / filter · q quit · ? help "
