tests/snapshots/tui__get_result_renders_value.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 8)"
---
"p1                                      "
"┌p1────────────────────────────────────┐"
"│0.5                                   │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc bac"
