tests/snapshots/tui__interface_screen_renders_three_columns.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 60, 16)"
---
"org.busx.Test > /org/busx/Test > org.busx.Test              "
"┌methods──────────────────────────────────┐┌actions────────┐"
"│BumpVolume                               ││Get            │"
"│Join        as                           ││Set            │"
"│                                         ││Listen         │"
"└─────────────────────────────────────────┘│               │"
"┌▶ properties─────────────────────────────┐│               │"
"│volume  d  0.5                           ││               │"
"│name    s  "busx-test"                   ││               │"
"└─────────────────────────────────────────┘│               │"
"┌signals──────────────────────────────────┐│               │"
"│                                         ││               │"
"│                                         ││               │"
"│                                         ││               │"
"└─────────────────────────────────────────┘└───────────────┘"
"Tab column · ↑↓ select · Enter open · r refresh · Esc back ·"
